tests/should_fail/bug/2040.rs
extern crate creusot_std;
use creusot_std::prelude::*;

pub fn f<T: Eq>(x: T) -> bool {
    x == x
}
