tests/should_fail/bug/2040.stderr
warning: unused import: `creusot_std::prelude::*`
 --> 2040.rs:2:5
  |
2 | use creusot_std::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `T: creusot_std::model::DeepModel` is not satisfied
 --> 2040.rs:5:5
  |
5 |     x == x
  |     ^^^^^^ the trait `creusot_std::model::DeepModel` is not implemented for `T`

error: Failed to translate the contract of <T as std::cmp::PartialEq>::eq needed by f.
 --> 2040.rs:4:1
  |
4 | pub fn f<T: Eq>(x: T) -> bool {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: Failed to normalize <T as creusot_std::model::DeepModel>::DeepModelTy
 --> creusot-std/src/std/cmp.rs:14:26
  = help: There is probably a missing trait bound.

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
